# meetnote

./: .gitignore  LICENSE  README.md  config.example.toml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
meetnote/: __init__.py  agent.py  app.py  audio.py  audioswitch.py  cli.py  config.py  detect.py  devices.py  health.py  pipeline.py  summarize.py  transcribe.py
tests/: test_audio_paths.py  test_audioswitch.py  test_config.py  test_detect.py  test_devices.py  test_pipeline_paths.py
