[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetnote"
version = "0.1.0"
description = "Local-first macOS meeting recorder with on-device transcription and summaries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HustleCoding" }]
keywords = ["meeting", "recorder", "transcription", "whisper", "ollama", "macos"]

dependencies = [
    "psutil>=5.9",
    "requests>=2.31",
    "faster-whisper>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    # macOS-only menu-bar deps; ignored on other platforms (e.g. CI on Linux).
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
meetnote = "meetnote.cli:main"

[tool.setuptools.packages.find]
include = ["meetnote*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
